# fafind

./: .SRCINFO  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  PKGBUILD  README.md  RELEASE.md  REUSE.toml
.github/workflows/: release.yml
packaging/aur/: .SRCINFO  PKGBUILD  REUSE.toml
packaging/homebrew/: fafind.rb
src/: cli.rs  config.rs  main.rs  matcher.rs  output.rs  util.rs  walker.rs  worker.rs
