[package]
name = "fafind"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
# memchr is also a transitive dep of ignore, but we declare it directly because
# we use memmem in hot-path matching code. Relying solely on a transitive dep
# would silently break if ignore ever removed it.
memchr = "2.7"
# smallvec: stack-allocated vec for small exclude lists (avoids heap + hash overhead)
smallvec = { version = "1.13", features = ["union"] }

[profile.release]
# Link-time optimization: inlines across crate boundaries, removes dead code
lto = "thin"
# Single codegen unit: allows full cross-function inlining/optimization
codegen-units = 1
# panic=abort: eliminates unwinding machinery (~10-20% binary size reduction,
# avoids stack-unwind overhead in hot paths)
panic = "abort"
# Optimize for native CPU instruction set (enables AVX2 etc. where available)
# NOTE: binaries built with this won't run on older CPUs
# rustflags = ["-C", "target-cpu=native"]  # enable via RUSTFLAGS instead
opt-level = 3
