[package]
name = "fafind"
version = "1.0.1"
edition = "2024"
description = "Fast parallel filesystem search by filename"
license = "MIT"
repository = "https://github.com/rywils/fafind"
homepage = "https://github.com/rywils/fafind"
documentation = "https://docs.rs/fafind"
readme = "README.md"

keywords = ["cli", "search", "filesystem", "find", "fast"]
categories = ["command-line-utilities"]

include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
memchr = "2.7"
smallvec = { version = "1.13", features = ["union"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3

strip = true
